--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body {
   min-height: 100vh;
   overflow-x: hidden;
-  /* background-color: #44c4e7;
-  background-image: linear-gradient(to bottom right, #44c4e7, #1e0ddf); */
+  background-color: #000;
+  background-image: linear-gradient(to bottom right, #000, #001b49);
 
   color: #fff;
-  /* font-family: ; */
+  font-family: "Oswald", sans-serif;
   line-height: 1.5;
   text-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
 }
@@ -17,9 +17,10 @@ body::before {
   left: 0;
   right: 0;
   bottom: 0;
-  background-image: url("./img/berlin-2676497_1920.jpg");
+  background-image: url("./img/computer-1836330_1920.png");
   background-position: center;
   background-size: cover;
+  opacity: 0.3;
 }
 
 .main-container {
@@ -65,7 +66,7 @@ a {
   transform-origin: 0 0;
   transform: scale(1);
   transition: background-color 0.4s ease, transform 0.4s ease,
-    olor 0.4s ease out;
+    color 0.4s ease out;
   will-change: background-color, transform, color;
 }
 
@@ -98,12 +99,13 @@ a {
 .name {
   font-size: 2.25rem;
   line-height: 1.125;
+  /* font-family: ; */
 }
 
 .role {
   display: block;
   color: #ffdd44;
-  font-size: 0.75rem;
+  font-size: 1rem;
   margin-top: 10px;
 }
 
