--- a/style.css
+++ b/style.css
@@ -124,8 +124,8 @@ a {
 }
 
 .socials li {
-  height: 25px;
-  width: 25px;
+  height: 32px;
+  width: 32px;
   margin-right: 15px;
 }
 
@@ -167,11 +167,16 @@ a {
   }
   .socials {
     justify-content: flex-start;
+    align-items: center;
   }
 
   .button:hover {
     background-color: #ffdd44;
     color: #000;
     transform: scale(1.05);
+  }
+
+  a:hover {
+    transform: scale(1.2);
   }
 }
